--- a/footer/footer.html
+++ b/footer/footer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./footer.css">
+    <link rel="stylesheet" href="./footerresponseive.css">
 </head>
 <body>
     <div class="contianer_footer">
