--- a/services/services.html
+++ b/services/services.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./services.css">
+    <link rel="stylesheet" href="./serviceresponsive.css">
 </head>
 <body>
    
     <div class="service_head_img">
+        
         <img src="./static/images/sevices_head.png" alt="">
         <div class="service_img_text">
             <h2>Services</h2>
