--- a/doctors/doctors.html
+++ b/doctors/doctors.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./doctors.css">
+    <link rel="stylesheet" href="./doctorresponsive.css">
 </head>
 <body>
    
