--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./homepage.css">
+    <link rel="stylesheet" href="./homeresponsive.css">
+    
 </head>
 <body>
     <div class="hero_main">
