--- a/aboutpage/aboutus.html
+++ b/aboutpage/aboutus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./aboutus.css">
+    <link rel="stylesheet" href="./aboutresponsive.css">
 </head>
 <body>
     <div class="hero_main">
