--- a/contact-us/contactus.html
+++ b/contact-us/contactus.html
@@ -9,10 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="stylesheet" href="./contactresponsive.css">
   </head>
   <body>
     <main>
-      <section class="background_contactus">
+      <!-- <section class="background_contactus">
         <div class="container_contactus">
           <div class="content">
             <h1>Contact Us</h1>
@@ -27,7 +28,19 @@
             </nav>
           </div>
         </div>
-      </section>
+      </section> -->
+      <div class="contact_head_img">
+        <img src="./static/images/Rectangle 6.svg" alt="">
+        <div class="contact_img_text">
+            <h2>Contact Us</h2>
+            <ul class="breadcrumb">
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+            
+
+        </div>
+   </div>
       <div class="main_section">
          <section class="section-left">
           <div class="left-content">
