--- a/Privacy Policy/privacypolicy.html
+++ b/Privacy Policy/privacypolicy.html
@@ -20,7 +20,7 @@
   <body>
     <main>
       <div class="privacy_head_img">
-        <img src="./static/images/privacypolicybackground.svg" alt="">
+        <img src="./static/images/privacy_head.png" alt="">
         <div class="privacy_img_text">
             <h2>Privacy Policy</h2>
             <ul class="breadcrumb">
